<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialSettings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_0_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_1_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_2_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_3_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_4_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_5_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_6_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_7"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_7_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_8"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_8_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/eq_slider_band_9"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dtsultra_eq_slider_length"
                android:orientation="vertical"
                android:stepSize="@dimen/dtsultra_eq_slider_step"
                android:value="@dimen/dtsultra_eq_slider_default"
                android:valueFrom="@dimen/dtsultra_eq_slider_min"
                android:valueTo="@dimen/dtsultra_eq_slider_max"
                app:thumbHeight="@dimen/dtsultra_eq_slider_thumb"
                app:trackHeight="@dimen/dtsultra_eq_slider_track" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dtsultra_eq_band_9_title" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>